<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mars</string>

    <style name="Theme.AppCompat.Light.NoActionBar.FullScreen" parent="@style/Theme.AppCompat.Light.NoActionBar">
        <item name="android:windowNoTitle">true</item>
        <item name="android:windowActionBar">false</item>
        <item name="android:windowFullscreen">true</item>
        <item name="android:windowContentOverlay">@null</item>
    </style>

    <string name="ok">OK</string>
    <string name="login_offline">Your device needs to be online in order to login. Please check your connection settings.</string>
    <string name="loading_wait">Loading Please wait...</string>
    <string name="login_online">Verifying credentials...</string>
    <string name="internet_error">Network error, please try again</string>
    <string name="error_try_again">Error, please try again</string>
    <string name="server_error_try_again">Server error, please try again</string>

    <!--Splash-->
    <string name="login">Login</string>
    <string name="trial">Trial</string>

    <!--Trial-->
    <string name="name">Name</string>
    <string name="phone">Phone No.</string>
    <string name="email">Email</string>
    <string name="query">Query</string>
    <string name="submit">Submit</string>
    <string name="error_wrong_number">You have entered a wrong mobile number.</string>
    <string name="err_msg_email">You have entered a invalid email address.</string>
    <string name="err_msg_username">Please enter your username.</string>
    <string name="err_msg_query">Please enter your Query.</string>

    <!--Login-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="err_msg_pass">Please enter your password.</string>

    <!--Home scren-->
    <string name="profile">Profile</string>
    <string name="work_out">Work Out</string>
    <string name="diet_plan">Diet Plan</string>
    <string name="membership">Membership</string>
    <string name="bmi_calc">BMI calculator</string>
    <string name="offers">Offers</string>

    <!--Profile Screen-->
    <string name="gender">Gender</string>
    <string name="dob">Date Of Birth</string>
    <string name="update">Update</string>
    
    <!--BMI calculator screen-->
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="very_severely_underweight">Very Severely Underweight</string>
    <string name="severely_underweight">Severely Underweight</string>
    <string name="underweight">Underweight</string>
    <string name="normal">Normal</string>
    <string name="overweight">Overweight</string>
    <string name="obese_class_i">Obese Class I</string>
    <string name="obese_class_ii">Obese Class II</string>
    <string name="obese_class_iii">Obese Class III</string>

    <string-array name="weight">
        <item>kg</item>
        <item>lbs </item>
    </string-array>

    <string-array name="height">
        <item>ft</item>
        <item>cm</item>
    </string-array>

    <!--Spinner-->
    <style name="Spinner" parent="Widget.AppCompat.Light.DropDownItem.Spinner">
        <item name="android:paddingStart">0dp</item>
        <item name="android:paddingEnd">0dp</item>
        <item name="android:textColor">@color/white</item>
        <item name="android:textSize">14sp</item>
    </style>

</resources>
