<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/trial_back"
    android:focusable="false"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/ll_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/pad_120dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/pad_80dp"
                android:src="@drawable/logo"
                android:text="@string/app_name"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/font_xxxlarge" />

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/pad_48dp"
                android:layout_marginTop="@dimen/pad_48dp"
                android:layout_marginEnd="@dimen/pad_48dp"
                android:layout_marginBottom="@dimen/pad_10dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/pad_5dp"
                    android:layout_marginTop="@dimen/pad_5dp"
                    android:layout_marginBottom="@dimen/pad_10dp"
                    android:theme="@style/TextLabel">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/input_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_xlarge" />

                </android.support.design.widget.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dip"
                    android:background="@color/white" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/pad_5dp"
                    android:layout_marginTop="@dimen/pad_10dp"
                    android:layout_marginBottom="@dimen/pad_10dp"
                    android:theme="@style/TextLabel">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/input_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/phone"
                        android:inputType="number"
                        android:maxLines="1"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_xlarge" />

                </android.support.design.widget.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dip"
                    android:background="@color/white" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/pad_5dp"
                    android:layout_marginTop="@dimen/pad_10dp"
                    android:layout_marginBottom="@dimen/pad_10dp"
                    android:theme="@style/TextLabel">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_xlarge" />

                </android.support.design.widget.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dip"
                    android:background="@color/white" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_query"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/pad_5dp"
                    android:layout_marginTop="@dimen/pad_10dp"
                    android:layout_marginBottom="@dimen/pad_10dp"
                    android:theme="@style/TextLabel">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/input_query"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/query"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_xlarge" />

                </android.support.design.widget.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dip"
                    android:background="@color/white" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/pad_48dp"
                    android:layout_marginStart="@dimen/pad_48dp"
                    android:layout_marginTop="@dimen/pad_48dp"
                    android:layout_marginEnd="@dimen/pad_48dp"
                    android:background="@drawable/red_btn_back"
                    android:gravity="center"
                    android:text="@string/submit"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_xxlarge"
                    android:layout_marginBottom="@dimen/pad_15dp"/>

            </android.support.v7.widget.LinearLayoutCompat>
        </android.support.v7.widget.LinearLayoutCompat>
    </ScrollView>
</android.support.v7.widget.LinearLayoutCompat>