<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_back">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/pad_48dp"
            android:layout_marginTop="@dimen/pad_48dp"
            android:layout_marginEnd="@dimen/pad_48dp"
            android:layout_marginBottom="@dimen/pad_10dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/pad_5dp"
                android:layout_marginTop="@dimen/pad_5dp"
                android:layout_marginBottom="@dimen/pad_10dp"
                android:theme="@style/TextLabel">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/input_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_xlarge" />

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dip"
                android:background="@color/white" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/pad_5dp"
                android:layout_marginTop="@dimen/pad_10dp"
                android:layout_marginBottom="@dimen/pad_10dp"
                android:theme="@style/TextLabel">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/input_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_xlarge" />

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dip"
                android:background="@color/white" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/pad_48dp"
                android:layout_marginStart="@dimen/pad_38dp"
                android:layout_marginTop="@dimen/pad_48dp"
                android:layout_marginEnd="@dimen/pad_38dp"
                android:layout_marginBottom="@dimen/pad_15dp"
                android:background="@drawable/red_btn_back"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/font_xxlarge" />

        </android.support.v7.widget.LinearLayoutCompat>


    </LinearLayout>
    </ScrollView>

</android.support.v7.widget.LinearLayoutCompat>